# nitro_log

./: .gitignore  Cargo.toml  README.md  example.config.json
src/: config.rs  error.rs  format.rs  lib.rs
src/kv/: default_structure_dump.rs  dynamic_variables.rs  mod.rs
src/loggers/: console.rs  file.rs  mod.rs  target.rs  writer.rs
src/loggers/console/: mod.rs
src/loggers/file/: mod.rs
src/loggers/tree/: mod.rs
src/placeholder/: chrono.rs  colored.rs  mod.rs  standard_placeholders.rs
src/placeholder/style_term/: level.rs
src/placeholders/: mod.rs
src/placeholders/time/: mod.rs
tests/: custom_placeholder.json  custom_placeholder_test.rs  logger_tests.rs  normal.rs
