[package]
name = "nitro_log"
version = "1.0.1"
edition = "2021"
repository = "https://github.com/wherkamp/nitro_log"
authors = ["Wyatt Herkamp <wherkamp@kingtux.me>"]
description = "Customizable and Expandable Logger"
license = "MIT"
readme = "README.md"
keywords = ["log", "logger", "logging"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.17", features = ["std", "serde", "kv_unstable", "kv_unstable_serde", "kv_unstable_std"] }
serde_json = "1.0.70"
serde = { version = "1.0.130", features = ["derive"] }
regex = "1.5.4"
chrono = { version = "0.4.19", optional = true }
style-term = { version = "1.0.0", features = ["serde"], optional = true }
thiserror = "1.0.31"
anyhow = "1.0.57"
