[package]
name = "nitro_log"
version = "1.0.2"
edition = "2021"
repository = "https://github.com/wherkamp/nitro_log"
authors = ["Wyatt Herkamp <wherkamp@kingtux.me>"]
description = "Customizable and Expandable Logger"
license = "MIT"
readme = "README.md"
keywords = ["log", "logger", "logging"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["std", "serde", "kv_unstable", "kv_unstable_serde", "kv_unstable_std"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
regex = "1.5"
chrono = { version = "0.4", optional = true }
style-term = { version = "1.0.0", features = ["serde"], optional = true }
thiserror = "1"
anyhow = "1"
